# HRPro

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs  routes.rs
src/database/: connect.rs  database.rs  mod.rs
src/database/dbcontrollers/: mod.rs  users.rs  users_controller.rs
src/handlers/: auth.rs  index.rs  login.rs  mod.rs  not_found.rs  users.rs
src/languages/: mod.rs  pt_br.rs
src/routes/: auth_routes.rs  mod.rs  order_routes.rs  treat_routes.rs  user_routes.rs
static/res/css/: style.css
templates/: base.tera  index.tera  jobsvacancies.tera  login.tera  not_found.tera  register.tera  user.tera  users.tera
templates/blocks/: head.tera  header.tera
