[package]
name = "rh_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1.12.0"
actix-web = "^4.3.1"
actix-files = "^0.6"
diesel = { version = "1.4.5", features = ["mysql"] }
env_logger = "0.9.0"
log = "0.4.11"