[package]
name = "mhger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1.12.0"
actix-web = "^4.3.1"
actix-files = "^0.6"
diesel = { version = "1.4.5", features = ["mysql"] }
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
env_logger = "0.9.0"
log = "0.4.11"
mysql = "20.0.0"
serde = { version = "1.0", features = ["derive"] }
bcrypt = "0.10.1"